--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Lab02</string>
+    <string name="rbopcion1">Plato</string>
+    <string name="rbopcion2">Postre</string>
+    <string name="rbopcion3">Bebida</string>
 </resources>
