--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,19 @@
 <resources>
     <string name="app_name">Lab02</string>
+    <string name="titulo">Pedite la cena!!!</string>
+    <string name="btn_delivery">DELIVERY</string>
+    <string name="btn_reservar">RESERVAR MESA</string>
+    <string name="textView_horario">Seleccione el horario</string>
+    <string name="switch_notificacion">Notificar Reserva 1 hora antes</string>
+    <string name="menu">___MENU___</string>
     <string name="rbopcion1">Plato</string>
     <string name="rbopcion2">Postre</string>
     <string name="rbopcion3">Bebida</string>
+    <string name="btn_agregar">Agregar</string>
+    <string name="btn_confirmar">Confirmar pedido</string>
+    <string name="btn_reiniciar">Reiniciar</string>
+    <string name="total">TOTAL: $ %.2f</string>
     <string name="toastUnselected">No hay elemento seleccionado</string>
     <string name="toastPedidoYaConfirmado">No se puede agregar, pedido ya confirmado</string>
+    <string name="toastPedidoVacio">Debe realizar su pedido antes de confirmar</string>
 </resources>
